apps/networking/traefik-kustomize/auth/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth-chain
spec:
  chain:
    middlewares:
    # - name: https-only
    - name: whitelist-auth
    - name: traefik-forward-auth

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-forward-auth
spec:
  forwardAuth:
    address: http://traefik-forward-auth:4181
    trustForwardHeader: true
    authResponseHeaders:
      - X-Forwarded-User

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-only
spec:
  redirectScheme:
    scheme: https

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whitelist-auth
spec:
  ipWhiteList:
    sourceRange:
    - 192.168.1.0/24
    - 127.0.0.1/32
    - 100.64.0.0/10
    - 66.33.10.161/32
