apps/networking/traefik-kustomize/auth/auth-callback-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-auth-callback-route
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.lab.apj.dev`) && Path(`/_oauth`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
  tls:
    secretName: lab-apj-dev-tls
