apps/networking/traefik-kustomize/auth/auth-general-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-auth-general-route
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.lab.apj.dev`) && !Path(`/_oauth`)
      kind: Rule
      services:
        - name: traefik-forward-auth-host
          port: 80
  tls:
    secretName: lab-apj-dev-tls
