apps/networking/traefik-kustomize/auth/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefikauth-route
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`auth.lab.apj.dev`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
  tls:
    secretName: lab-apj-dev-tls
